<resources>
    <string name="logo">logo</string>
    <string name="about">About</string>
    <string name="hint">Password</string>
    <string name="logout">logout</string>
    <string name="cemkian">Cemkian</string>
    <string name="app_name">Cemkian</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="memojidp">Memoji-DP</string>
    <string name="change_time">change time</string>
    <string name="login_button">login button</string>
    <string name="view_password">view password</string>
    <string name="title_activity_abouts">abouts</string>
    <string name="dev_on_way">utsanjan@gmail.com</string>
    <string name="select_severity">Select Severity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="enter_college_email">College Email</string>
    <string name="_cached">Cached Response if enabled</string>
    <string name="bug_report_feature_request">Report Bug</string>
    <string name="_notif">Daily Attendance Notifications   </string>
    <string name="it_is_a_rooted_device">It is a rooted device</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="is_seen_multiple_times">Is seen multiple times.</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="i_agree_to_privacy_policy">I agree to privacy policy.</string>
    <string name="hello_world_i_m_utsanjan_maity">Hello world, I\'m Utsanjan Maity</string>
    <string name="internet_must_be_connected_at_specified_time">*Internet must be connected at specified time\nDoze Mode / Battery Saver prevents low priority\nbackground services to run properly\n\n\n</string>
    <string name="why">Instant, so stop using browsers,logging in again &amp; again and saving passwords insecurely in browser.\n• Well organized UI, with overall &amp; per-subject information along with action assist.\n• Daily auto-attendance checker, get informed about your attendance without even opening the app.</string>
    <string name="about_us">Frontend and UI by me, and Backend credit goes to\nPratim Majumder, Information Technology batch\n2018–22. Below you'll find more details about\nthis app's version and the social handles.</string>
</resources>
