<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@drawable/background_grad"
    tools:context=".ui_access.SettingsActivity">

    <ImageButton
        android:id="@+id/settings_back"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/trans"
        android:contentDescription="@string/_cached"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_arrow_back_24"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Settings"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:textSize="40sp"
            android:shadowRadius="10"
            android:shadowColor="#463A3A3A"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:neumorph_shapeType="pressed"
            android:layout_marginTop="40dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usr"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_college_email"
            android:inputType="textNoSuggestions"
            android:textColor="#474747"
            android:textColorHint="#808080" />
        </soup.neumorphism.NeumorphCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:neumorph_shapeType="pressed"
                tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint"
                android:background="#00000000"
                android:inputType="textNoSuggestions|textPassword"
                android:textColor="#474747"
                android:textColorHint="#808080"
                app:layout_constraintBaseline_toBaselineOf="@+id/view_pass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_pass"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            </soup.neumorphism.NeumorphCardView>

            <ImageView
                android:id="@+id/view_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:contentDescription="@string/view_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_view_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/visiblePass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/trans"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="0dp"
            android:textColor="#7C474747"
            android:visibility="invisible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/daily_chk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:text="@string/_notif"
            android:textColor="#474747" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03">

        <TextView
            android:id="@+id/timeRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text=" "
            android:textColor="#474747" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/changeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_time"
            android:textColor="#474747" />
    </LinearLayout>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_done"
            android:layout_margin="15dp"
            app:tint="#474747"
            android:contentDescription="@string/_cached" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sv"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:background="@color/trans"
            android:backgroundTint="@color/trans"
            android:contentDescription="@string/login_button"
            android:scaleType="center"
            android:stateListAnimator="@null"
            app:borderWidth="0px"
            app:elevation="0dp"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="383dp" />

    </soup.neumorphism.NeumorphCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textColor="#83474747"
        android:textSize="12sp"
        android:text="@string/internet_must_be_connected_at_specified_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>